Update font size of markdown input textarea

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ h1 {
 
 #editor {
   font-family: Menlo, Monaco, monospace;
-  font-size: 12px;
+  font-size: 1.2em;
   outline: none;
   resize: none;
 }
