--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 body {
-  background-color: #d3e2ff;
+  background-color: #ade1ff;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  -ms-overflow-style: none;
 }
 
 .header {
@@ -8,7 +16,7 @@ body {
   height: 58px;
 }
 
-h1 {
+.header h1 {
   margin: 0;
   font-size: 3.4em;
   color: #000;
@@ -33,7 +41,8 @@ h1 {
 }
 
 .label {
-  color: #000;
+  font-family: balto, helvetica, sans-serif;
+  color: #4c4e4d;
   font-size: 2em;
 }
 
@@ -47,6 +56,7 @@ h1 {
   flex-shrink: 1;
   box-shadow: 7px 7px 5px #3a3a3a;
   border-radius: 6px;
+  background-color: #f4f4f4;
 }
 
 #editor {
@@ -54,24 +64,25 @@ h1 {
   font-size: 1.2em;
   outline: none;
   resize: none;
-  background-color: #f4f4f4;
-}
-
-#preview {
-  background-color: #f4f4f4;
 }
 
 .footer {
+  font-family: balto, helvetica, sans-serif;
   width: 450px;
   text-align: center;
   display: block;
   margin: 30px auto 30px auto;
   font-size: 2em;
-  color: #333;
+  color: #4c4e4d;
 }
 
 .footer a {
+  font-family: balto, helvetica, sans-serif;
   font-weight: 500;
   text-decoration: none;
-  color: #333;
+  color: #4c4e4d;
+}
+
+a:hover {
+  color: #000;
 }
